updated PageAbout/Hero for larger screens. Updated Hero styling. Updated PageMovie - added fave icon - overlay youtube video - color rating - filled nofave page. need to fix: PageMovie for larger screens - cast distorted. button from nofavepage shrinks

--- a/src/styles/MovieCard.css
+++ b/src/styles/MovieCard.css
@@ -28,7 +28,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: var(--hover-brown);
+  background: rgba(var(--hover-brown-rgb), 0.8);
   color: white;
   padding: 20px;
   opacity: 0;
@@ -103,21 +103,21 @@
   font-weight: bold;
   border: 5px solid;
   margin-right: 10px;
+  color: var(--main-font-white);
 }
-
 
 @media (min-width: 768px) {
   .movie-card {
-      flex: 1 1 300px;
-      max-width: 300px;
-      height: 450px; 
+    flex: 1 1 300px;
+    max-width: 300px;
+    height: 450px;
   }
 }
 
 @media (min-width: 1200px) {
   .movie-card {
-      flex: 1 1 300px;
-      max-width: 300px;
-      height: 450px; 
+    flex: 1 1 300px;
+    max-width: 300px;
+    height: 450px;
   }
 }
